<resources>
    <string name="app_name">CSE Wallet</string>
    <string name="up_sign_in_now">Sign In Now</string>
    <string name="up_email">Email</string>
    <string name="up_password">Password</string>
    <string name="up_sign_in">Sign In</string>
    <string name="up_forget_password">Forget Password ?</string>
    <string name="up_not_a_member_yet">Not a Member Yet ?</string>
    <string name="up_register">Register</string>
    <string name="err_email_is_empty">Please input email</string>
    <string name="up_ok">OK</string>
    <string name="err_email_is_invalid">Email is invalid</string>
    <string name="err_password_is_empty">Please input password</string>
    <string name="up_register_now">Register Now</string>
    <string name="up_full_name">Full Name</string>
    <string name="up_confirm_password">Confirm Password</string>
    <string name="up_phone_number">Phone Number</string>
    <string name="up_country">Country</string>
    <string name="up_sign_up">Sign Up</string>
    <string name="up_already_a_member">Already a Member ?</string>
    <string name="err_full_name_is_empty">Please input full name</string>
    <string name="err_confirm_password_is_empty">Please input confirm password</string>
    <string name="err_password_does_not_match">Password and confirm password does not match</string>
    <string name="err_phone_number_is_empty">Please input phone number</string>
    <string name="err_phone_number_is_invalid">Phone number is invalid</string>
    <string name="err_country_is_empty">Please input country</string>
    <string name="err_connection_fail">Connection failed. Please try again!</string>
    <string name="up_user_name">User name</string>
    <string name="err_email_does_not_exist">Email does not exist</string>
    <string name="err_password_is_incorrect">Password is incorrect</string>
    <string name="err_your_account_is_blocked">Your account is blocked</string>
    <string name="err_email_exist">Email exist</string>
    <string name="err_user_name_exist">User name exist</string>
    <string name="err_password_length_invalid">Password from 6 – 35 characters</string>
    <string name="err_user_name_length_invalid">User name from 6 – 35 characters</string>
    <string name="err_confirm_password_length_invalid">Confirm password from 6 – 35 characters</string>
    <string name="up_cse_price">CSE Price</string>
    <string name="up_receive">Receive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transection">Transaction</string>
    <string name="sent">Send</string>
    <string name="log_out">Log Out</string>
    <string name="receive">Receive</string>
    <string name="profile">Profile</string>
    <string name="enable">Enable</string>
    <string name="authenticate">Authenticate</string>
    <string name="use_the_authenticator_app_to_get_free_verfiticaion_code_even_when_your_phone_is_offline_available_for_android_and_iphone">Use the Authenticator app to get free verfiticaion code even when your phone is offline . Available for Android and Iphone</string>
    <string name="security_key">Security key</string>
    <string name="_2fa">(2fa)</string>
    <string name="authentication_code">Authentication code</string>
    <string name="google_2fa_code">Google 2fa code</string>
    <string name="i_have_writen_down_this_backup_on_paper">I have writen down this backup on paper</string>
    <string name="confirm">Confirm</string>
    <string name="copy_clipboard"> Copied to clipboard !</string>
    <string name="copy_toast">Your security key copied to clipboard !</string>
    <string name="google_auth_success">Enable google auth successful !</string>
    <string name="google_auth_fails">Enable google auth fails !</string>
    <string name="send_now">Send Now</string>
    <string name="address">Address</string>
    <string name="amounts">Amounts</string>
    <string name="notes">Notes</string>
    <string name="err_amount_not_emtry">Please input amount !</string>
    <string name="err_address_not_emtry">Please input Address Wallet !</string>
    <string name="sent_success">Sent successful !</string>
    <string name="msg_an_error_has_occurred">An error has occurred</string>
    <string name="sent_fails">Sent Fails</string>
    <string name="price">0.000</string>
    <string name="msg_photo_not_updated">Photo not updated\nPlease try again</string>
    <string name="Fee">Fee</string>
    <string name="upcase_go_to_settings">GO TO SETTINGS</string>
    <string name="upcase_cancel">CANCEL</string>
    <string name="msg_permission_pick_photo_not_granted">You should grand this permission to pick your photo!</string>
    <string name="err_2fa_not_emtry">Please input 2fa code !</string>
    <string name="remove_success">Disable success !</string>
    <string name="remove_fails">Disable fails  !</string>
    <string name="disable">Disable</string>
    <string name="activity">Activity</string>
    <string name="resend">Resend</string>
    <string name="dont_receive_code">Don\'t receive code</string>
    <string name="submit">Submit</string>
    <string name="active_code">Active Code</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Please_active_this_email">Please active this email !</string>
    <string name="CODE_VERIFY_NOT_MATCH">Code verity not match</string>
    <string name="NOT_FOUND_EMAIL">Email not found</string>
    <string name="change_password">Change Password</string>
    <string name="request_sent">Request Send</string>
</resources>
