<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/dp10"
        android:textColor="@color/colorBlack"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:text="@string/authenticate"
            android:textSize="@dimen/sp20"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_close"
           android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_close"
            android:scaleType="fitCenter"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorGrey"
        android:layout_height="1dp"/>

    <ImageView
        android:id="@+id/iv_barCode"
        android:scaleType="fitXY"
        android:layout_margin="@dimen/dp30"
        android:src="@drawable/profile_ic"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_boder_gray"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="@dimen/dp5"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:text="@string/security_key"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGrey" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:padding="@dimen/dp5"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp1"
                android:layout_marginBottom="@dimen/dp1"
                android:background="@color/color_enable_grey_dark"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edt_generateBarCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/sp13"
                    android:focusable="false"
                    android:editable="false"
                    android:clickable="false"
                    android:textColor="@color/colorBlack"
                    android:background="@null" />
            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGrey" />
            <LinearLayout
                android:id="@+id/btn_copy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:src="@drawable/ic_copy" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:text="@string/authentication_code"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:text="@string/_2fa"
                android:textColor="@color/colorGrey" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_google2faCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_boder_gray"
            android:hint="@string/google_2fa_code"
            android:textColor="@color/colorBlack"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/colorGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_writeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_writen_down_this_backup_on_paper"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="@style/CSEButtonStyleLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_30sp"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>