<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="sg.cse.wallet.mvp.signup.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:background="@drawable/bg_top_signinup"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/up_register_now"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_30sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/up_user_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/size_8dp"
                        android:textSize="@dimen/size_15sp"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/size_50dp"
                            android:layout_height="@dimen/size_50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/bg_icon"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fullname"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1dp"
                    android:background="@drawable/border_bottom_edittext" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/up_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/size_8dp"
                        android:textSize="@dimen/size_15sp"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/size_50dp"
                            android:layout_height="@dimen/size_50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/bg_icon"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_email"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1dp"
                    android:background="@drawable/border_bottom_edittext" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/up_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/size_8dp"
                        android:textSize="@dimen/size_15sp"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/size_50dp"
                            android:layout_height="@dimen/size_50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/bg_icon"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_password"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1dp"
                    android:background="@drawable/border_bottom_edittext" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/up_confirm_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/size_8dp"
                        android:textSize="@dimen/size_15sp"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/size_50dp"
                            android:layout_height="@dimen/size_50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/bg_icon"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_password"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1dp"
                    android:background="@drawable/border_bottom_edittext" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/CSEButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:text="@string/up_sign_up" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/size_8dp"
            android:text="@string/up_already_a_member"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_12sp" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/size_8dp"
            android:text="@string/up_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/size_12sp" />

    </LinearLayout>

</LinearLayout>