<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/top_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20sp"
            android:layout_marginTop="-60dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/size_4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightBlue"
                    android:padding="@dimen/size_3dp">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="@dimen/dp80"
                        android:layout_height="@dimen/dp80"
                        android:scaleType="fitXY"
                        android:src="@drawable/bg_avatar" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/size_20sp"
                android:gravity="start|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_20sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="adv@gmail.com"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp13" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:scaleType="fitCenter"
            android:layout_height="match_parent"
            android:src="@drawable/border_bg" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingTop="@dimen/size_10dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/profile_ic" />

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/setting_ic" />
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:layout_height="match_parent"
            android:src="@drawable/border_bg"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/transaction_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10dp"
            android:background="@color/itemMenu"
            android:padding="@dimen/size_10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/transection_ic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/transection"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrow_ic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/receive_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10dp"
            android:background="@color/itemMenu"
            android:padding="@dimen/size_10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/receive_ic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/up_receive"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrow_ic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sent_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10dp"
            android:background="@color/itemMenu"
            android:padding="@dimen/size_10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/send_ic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/sent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrow_ic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/request_sent_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10dp"
            android:background="@color/itemMenu"
            android:padding="@dimen/size_10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/send_ic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/request_sent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrow_ic" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            style="@style/CSEButtonStyleLogout"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_30sp"
            android:text="@string/log_out" />
    </LinearLayout>

</LinearLayout>